# Cup_despenser

./: README.md
indy-ros/indy_driver_py/: CMakeLists.txt  package.xml
indy-ros/indy_driver_py/launch/: dcp.launch  indy7_moveit_dcp.launch  rdv_dcp.launch
indy-ros/indy_driver_py/src/: dcp_driver.py  dcp_driver_copy.py  gripper_row_init.py  gripper_row_init_cp.py  indy_test.py  indydcp_client.py  pus  run_cam_visual.sh  run_indy7_con.sh  run_vision.sh
indy-ros/indy_driver_py/src/indy_utils/: indydcp_client.py
indy-ros/indy_driver_py/srv/: indy_blend.srv  indy_collsion_stop.srv
moveit_py/src/: d1_get_basic_info.py  d2_move_joint_space.py  test.py
rdv_py/: CMakeLists.txt  package.xml
rdv_py/src/: d1_get_basic_info.py  d2_move_joint_space.py  d3_move_target_pose.py  pick_n_place.py  radiantodegree.py  tmp.txt
rdv_py/src/gripper/: gripper_row_init.py  pick_n_place.py
rdv_py/src/gripper/indy_utils/: indy_program_maker.py  indydcp_client.py
rdv_py/src/test/: test.py  test_copy.py
rdv_py/src/tmp/: tmp-pick.py
ros_rdv/: CMakeLists.txt  package.xml
ros_rdv/launch/: add_two_ints.launch
ros_rdv/src/: intfloatstring_client.cpp  rdv_client.cpp  rdv_py_client.py  rdv_py_server.py  rdv_rctrl_cup.cpp  rdv_server.cpp
ros_rdv/src/include/: rdv_core.h
ros_rdv/src/rdv/: CMakeLists.txt  package.xml  pick.cpp  rdv.cpp  rdv_copy.cpp  tmp.py
ros_rdv/src/rdv_cup/: rdv_core.cpp  rdv_core.h  rdv_run.cpp
ros_rdv/src/service_practice/: add_two_ints_client.cpp  add_two_ints_server.cpp  intfloatstring_server.cpp  tmp.cpp
ros_rdv/srv/: intfloatstring.srv  rdv.srv
